{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 144,
  "lineage": "7ffc0c3b-4775-8546-0ede-3f0383c4d8d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:234187612613:internet-gateway/igw-0d67fc1203ce496ae",
            "id": "igw-0d67fc1203ce496ae",
            "owner_id": "234187612613",
            "tags": {
              "Environment": "dr-test",
              "Name": "dr-test-igw"
            },
            "tags_all": {
              "Environment": "dr-test",
              "Name": "dr-test-igw"
            },
            "vpc_id": "vpc-0383d72a09f6acb25"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d67fc1203ce496ae",
            "id": "r-rtb-08fd6236ec6c948b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08fd6236ec6c948b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:234187612613:route-table/rtb-0995863a1173f826e",
            "id": "rtb-0995863a1173f826e",
            "owner_id": "234187612613",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dr-test",
              "Name": "dr-test-private-route-table"
            },
            "tags_all": {
              "Environment": "dr-test",
              "Name": "dr-test-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0383d72a09f6acb25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:234187612613:route-table/rtb-08fd6236ec6c948b8",
            "id": "rtb-08fd6236ec6c948b8",
            "owner_id": "234187612613",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dr-test",
              "Name": "dr-test-public-route-table"
            },
            "tags_all": {
              "Environment": "dr-test",
              "Name": "dr-test-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0383d72a09f6acb25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd3197789a35d7cf",
            "route_table_id": "rtb-0995863a1173f826e",
            "subnet_id": "subnet-064a69cc1681a192d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1b8122a9b746375",
            "route_table_id": "rtb-0995863a1173f826e",
            "subnet_id": "subnet-08b806a421d0a2ec3"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e56f4341b50f6a60",
            "route_table_id": "rtb-08fd6236ec6c948b8",
            "subnet_id": "subnet-0f5feda5db2ee3b26"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc6664292eb55d4e",
            "route_table_id": "rtb-08fd6236ec6c948b8",
            "subnet_id": "subnet-005fa1feeca4625f1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "console",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:234187612613:security-group/sg-0fc6cbabc1aa48d5f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fc6cbabc1aa48d5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "console-sg20230731103112984600000001",
            "name_prefix": "console-sg",
            "owner_id": "234187612613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Console Security Group"
            },
            "tags_all": {
              "Name": "Console Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0383d72a09f6acb25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:234187612613:security-group/sg-0db21bbe86fc2a0dc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db21bbe86fc2a0dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http/https-sg20230731103112992800000002",
            "name_prefix": "http/https-sg",
            "owner_id": "234187612613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HTTP/S Security Group"
            },
            "tags_all": {
              "Name": "HTTP/S Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0383d72a09f6acb25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:234187612613:subnet/subnet-064a69cc1681a192d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064a69cc1681a192d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234187612613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dr-test",
              "Name": "dr-test-ap-south-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "dr-test",
              "Name": "dr-test-ap-south-1a-private-subnet"
            },
            "vpc_id": "vpc-0383d72a09f6acb25"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:234187612613:subnet/subnet-08b806a421d0a2ec3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b806a421d0a2ec3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234187612613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dr-test",
              "Name": "dr-test-ap-south-1b-private-subnet"
            },
            "tags_all": {
              "Environment": "dr-test",
              "Name": "dr-test-ap-south-1b-private-subnet"
            },
            "vpc_id": "vpc-0383d72a09f6acb25"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:234187612613:subnet/subnet-0f5feda5db2ee3b26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5feda5db2ee3b26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234187612613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dr-test",
              "Name": "dr-test-ap-south-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "dr-test",
              "Name": "dr-test-ap-south-1a-public-subnet"
            },
            "vpc_id": "vpc-0383d72a09f6acb25"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:234187612613:subnet/subnet-005fa1feeca4625f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005fa1feeca4625f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234187612613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dr-test",
              "Name": "dr-test-ap-south-1b-public-subnet"
            },
            "tags_all": {
              "Environment": "dr-test",
              "Name": "dr-test-ap-south-1b-public-subnet"
            },
            "vpc_id": "vpc-0383d72a09f6acb25"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:234187612613:vpc/vpc-0383d72a09f6acb25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08384d7b295a50ac0",
            "default_route_table_id": "rtb-0bce2366892dee73b",
            "default_security_group_id": "sg-0b2e188a4c99c5e2b",
            "dhcp_options_id": "dopt-c8fc4aa3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0383d72a09f6acb25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bce2366892dee73b",
            "owner_id": "234187612613",
            "tags": {
              "Environment": "dr-test",
              "Name": "dr-test-vpc"
            },
            "tags_all": {
              "Environment": "dr-test",
              "Name": "dr-test-vpc"
            }
          }
        }
      ]
    }
  ]
}